[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Interfaz.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Voetter Italic.ttf" type="DynamicFontData" id=2]


[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 2 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.5
margin_right = 26.5
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 2

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.5
margin_top = -36.5
margin_right = 170.5
margin_bottom = 36.5
custom_fonts/font = SubResource( 2 )
text = "Space Guy"
align = 1
valign = 1

[node name="ButtonPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -120.0
margin_right = 100.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 3 )
text = "Jugar"

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
